# python-my-classes

./: .gitignore  ClassName.py  README.md  pymc.yaml  pyproject.toml  requirements.txt
pymc/: Writer.py  __init__.py  __main__.py  cli.py  preset.yaml
tests/: test_pymc.py
