[tool.poetry]
name = "pymc"
version = "0.1.0"
description = "tool to create python classes"
authors = ["arthurfary <arthurfary22@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pymc = "pymc.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
pytest = "^7.2.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
